; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mutual-friends/extr_mf-data.c_do_del_exception.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mutual-friends/extr_mf-data.c_do_del_exception.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_mf_del_exception = type { i32, i32 }

@LEV_MF_DEL_EXCEPTION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_del_exception(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.lev_mf_del_exception*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @LEV_MF_DEL_EXCEPTION, align 4
  %7 = call %struct.lev_mf_del_exception* @alloc_log_event(i32 %6, i32 8, i32 0)
  store %struct.lev_mf_del_exception* %7, %struct.lev_mf_del_exception** %5, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load %struct.lev_mf_del_exception*, %struct.lev_mf_del_exception** %5, align 8
  %10 = getelementptr inbounds %struct.lev_mf_del_exception, %struct.lev_mf_del_exception* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.lev_mf_del_exception*, %struct.lev_mf_del_exception** %5, align 8
  %13 = getelementptr inbounds %struct.lev_mf_del_exception, %struct.lev_mf_del_exception* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load %struct.lev_mf_del_exception*, %struct.lev_mf_del_exception** %5, align 8
  %15 = call i32 @del_exception(%struct.lev_mf_del_exception* %14)
  ret i32 %15
}

declare dso_local %struct.lev_mf_del_exception* @alloc_log_event(i32, i32, i32) #1

declare dso_local i32 @del_exception(%struct.lev_mf_del_exception*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
